refactor(api-gateway): improve routing and security
- Update CORS configuration for broader access
- Transition to GlobalFilter for authentication
- Externalize service URLs via environment properties
- Add Kafka and JWT dependencies to common-packages
- Add dedicated network to docker-compose